tests/reference/run-array_bounds_check_03-15fcd63.stderr
runtime error: Array 'x' is not allocated. Allocate it manually or use the '--realloc-lhs-arrays' option to allocate it automatically.
 --> tests/errors/array_bounds_check_03.f90:4:5
  |
4 |     x = [1, 2, 3]
  |     ^ 'x' not allocated here
